# sm64pc

./: .gitignore  CMakeLists.txt  Makefile  README.md  char_list.txt  mario.py  sm64.py  sm64pc.cbp  widths.txt
include/: types.h
src/engine/: graph_node.c
src/game/: camera.c  camera.h  ingame_menu.c  interaction.c  level_update.c  level_update.h  mario.c  mario.h  mario_actions_cutscene.c  mario_actions_stationary.c  mario_actions_submerged.c  object_helpers.c  spawn_object.c
src/pc/: camera_python.c  camera_python.h  configfile.c  configfile.h  dialog_python.c  dialog_python.h  level_python.c  level_python.h  level_python_levels.h  logging_python.c  logging_python.h  mario_python.c  mario_python.h  mario_python_actions.h  mario_python_terrains.h  object_python.c  object_python.h  object_python_behavior.c  object_python_behavior.h  object_python_behaviors.h  object_python_models.h  pc_main.c  python_helpers.h  save_file_python.c  save_file_python.h  sounds_python.c  sounds_python.h
src/pc/fs/: fs.h
src/pc/gfx/: gfx_pc.c
tests/: check_mario_python.c  check_sm64.c
tools/: CMakeLists.txt  aiff_extract_codebook.c  mkheader.c  n64graphics.c  postproc_level_headers.py  skyconv.c  utils.c
tools/audiofile/: CMakeLists.txt  audiofile.cpp
tools/n64graphics_ci_dir/: n64graphics_ci.c  utils.c
tools/sdk-tools/adpcm/: vadpcm_enc.c
